# notes

./: .gitignore  Books.txt
automata/: build.sh  main.md  tikz.lua
general_programming/rusty_euler/: Cargo.toml
general_programming/rusty_euler/src/: lib.rs  main.rs
linear_algebra/: build.fish  main.md  tikz.lua  tikzcd.lua
linear_algebra/notes/: main.aux  main.fdb_latexmk  main.fls  main.tex
